# ha-sqworky

./: .gitignore  CHANGELOG.md  README.md  ha-sqworky.cabal
app/: Main.hs
