cabal-version:      2.4
name:               ha-sqworky
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Simple haskell pisqworky (connect 5, tic-tac-toe) game with functioning AI opponent.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Petr Tlapa
maintainer:         tlapik123@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable ha-sqworky
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0, gloss >=1.13.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
